[package]
name = "lightd"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "lightd"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
axum = { version = "0.7", features = ["ws", "macros","multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bollard = "0.16"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.0"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
tokio-tungstenite = { version = "0.21", default-features = false, features = ["rustls-tls-webpki-roots"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
num_cpus = "1.16"
dashmap = "5.5"
tar = "0.4"
flate2 = "1.0"
bzip2 = "0.4"
zip = "0.6"
mime_guess = "2.0"
